--- a/becpg-plm/becpg-plm-share/src/main/resources/alfresco/forms/becpg-plm-fp-form-config.xml
+++ b/becpg-plm/becpg-plm-share/src/main/resources/alfresco/forms/becpg-plm-fp-form-config.xml
@@ -27,6 +27,8 @@
           <show force="false" id="gs1:eanCodeInnerPack"/>
           <show force="false" id="bcpg:eanCodeLevel2"/>
           <show force="false" id="bcpg:eanCodeLevel3"/>
+          <show force="false" id="gs1:referencedTradeItemEanCode"/>
+          <show force="false" id="gs1:referencedTradeItemTypeCode"/>
           <show force="true" id="bcpg:subsidiaryRef"/>
           <show force="true" id="bcpg:trademarkRef"/>
           <show force="true" id="bcpg:plants"/>
@@ -83,9 +85,6 @@
           <show force="true" id="gs1:preparationType"/>
           <show force="false" id="bcpg:productMicrobioCriteriaRef"/>
           <show force="false" id="bcpg:meatType"/>
-          
-          <show force="false" id="gs1:referencedTradeItemEanCode"/>
-          <show force="false" id="gs1:referencedTradeItemTypeCode"/>
           
           <show force="false" id="gs1:isTradeItemSeasonal"/>
           <show force="false" id="gs1:seasonalAvailabilityStartDateTime"/>
@@ -169,6 +168,8 @@
           <show force="false" id="gs1:width"/>
           <show force="false" id="gs1:depth"/>
           <show force="false" id="gs1:diameter"/>
+          <show force="false" id="gs1:stackingFactor"/>
+          <show force="false" id="gs1:stackingMaxWeight"/>
           <show force="false" id="pack:tare"/>
           <show force="false" id="pack:tareUnit"/>
           <show force="false" id="gs1:weight"/>
@@ -372,37 +373,21 @@
           </field>
           
           <set appearance="bordered-panel" id="season" label-id="becpg.forms.set.season.label" parent="mainTab" template="/org/alfresco/components/form/2-column-set.ftl"/>
-          <field id="gs1:isTradeItemSeasonal" mandatory="false" read-only="false" set="season"/>
-          <field id="gs1:seasonalAvailabilityStartDateTime" mandatory="false" read-only="false" set="season">
+          <field id="gs1:isTradeItemSeasonal" mandatory="false" read-only="false" set="season">
           	<control template="/org/alfresco/components/form/controls/boolean.ftl"/>
-            <constraint-handlers>
-              <constraint event="change@[{'prop':'prop_gs1_isTradeItemSeasonal', 'condition' : '|false'}]" type="MANDATORY" validation-handler="beCPG.forms.validation.hideIf"/>
+          	<constraint-handlers>
+              <constraint event="change@[{'prop':'prop_gs1_seasonalAvailabilityStartDateTime', 'condition' : '|false'},
+              {'prop':'prop_gs1_seasonalAvailabilityEndDateTime', 'condition' : '|false'},
+              {'prop':'prop_gs1_seasonCalendarYear', 'condition' : '|false'},
+              {'prop':'prop_gs1_seasonName', 'condition' : '|false'},
+              {'prop':'prop_gs1_seasonParameterCode', 'condition' : '|false'}]" type="MANDATORY" validation-handler="beCPG.forms.validation.hideIf"/>
             </constraint-handlers>
           </field>
-          <field id="gs1:seasonalAvailabilityEndDateTime" mandatory="false" read-only="false" set="season">
-          	<control template="/org/alfresco/components/form/controls/boolean.ftl"/>
-            <constraint-handlers>
-              <constraint event="change@[{'prop':'prop_gs1_isTradeItemSeasonal', 'condition' : '|false'}]" type="MANDATORY" validation-handler="beCPG.forms.validation.hideIf"/>
-            </constraint-handlers>
-          </field>
-          <field id="gs1:seasonCalendarYear" mandatory="false" read-only="false" set="season">
-          	<control template="/org/alfresco/components/form/controls/boolean.ftl"/>
-            <constraint-handlers>
-              <constraint event="change@[{'prop':'prop_gs1_isTradeItemSeasonal', 'condition' : '|false'}]" type="MANDATORY" validation-handler="beCPG.forms.validation.hideIf"/>
-            </constraint-handlers>
-          </field>
-          <field id="gs1:seasonName" mandatory="false" read-only="false" set="season">
-          	<control template="/org/alfresco/components/form/controls/boolean.ftl"/>
-            <constraint-handlers>
-              <constraint event="change@[{'prop':'prop_gs1_isTradeItemSeasonal', 'condition' : '|false'}]" type="MANDATORY" validation-handler="beCPG.forms.validation.hideIf"/>
-            </constraint-handlers>
-          </field>
-          <field id="gs1:seasonParameterCode" mandatory="false" read-only="false" set="season">
-          	<control template="/org/alfresco/components/form/controls/boolean.ftl"/>
-            <constraint-handlers>
-              <constraint event="change@[{'prop':'prop_gs1_isTradeItemSeasonal', 'condition' : '|false'}]" type="MANDATORY" validation-handler="beCPG.forms.validation.hideIf"/>
-            </constraint-handlers>
-          </field>
+          <field id="gs1:seasonalAvailabilityStartDateTime" mandatory="false" read-only="false" set="season"/>
+          <field id="gs1:seasonalAvailabilityEndDateTime" mandatory="false" read-only="false" set="season"/>
+          <field id="gs1:seasonCalendarYear" mandatory="false" read-only="false" set="season"/>
+          <field id="gs1:seasonName" mandatory="false" read-only="false" set="season"/>
+          <field id="gs1:seasonParameterCode" mandatory="false" read-only="false" set="season"/>
           
           <set appearance="bordered-panel" id="pegHole" label-id="becpg.forms.set.pegHole.label" parent="mainTab" template="/org/alfresco/components/form/2-column-set.ftl"/>
           <field id="gs1:pegHoleNumber" mandatory="false" read-only="false" set="pegHole"/>
@@ -414,7 +399,12 @@
           <field id="bcpg:subsidiaryRef" mandatory="false" read-only="false" set="mainInfo"/>
           <field id="bcpg:trademarkRef" mandatory="false" read-only="false" set="mainInfo"/>
           <field id="bcpg:plants" mandatory="false" read-only="false" set="mainInfo"/>
-          <field id="gs1:organicProductPlaceOfFarmingCode" mandatory="false" read-only="false" set="mainInfo"/>
+          <field id="gs1:organicProductPlaceOfFarmingCode" mandatory="false" read-only="false" set="mainInfo">
+          	<control template="/org/alfresco/components/form/controls/boolean.ftl"/>
+            <constraint-handlers>
+              <constraint event="change@[{'prop':'prop_gs1_vintage', 'condition' : '|false'}]" type="MANDATORY" validation-handler="beCPG.forms.validation.hideIf"/>
+            </constraint-handlers>
+          </field>
           <field id="bcpg:productGeoOrigin" mandatory="false" read-only="false" set="mainInfo"/>
           <field id="gs1:targetMarkets" mandatory="false" read-only="false" set="mainInfo">
             <control template="/org/alfresco/components/form/controls/autocomplete-association.ftl">
@@ -773,6 +763,12 @@
               <control-param name="unit">mm</control-param>
             </control>
           </field>
+          <field id="gs1:stackingFactor" mandatory="false" read-only="false" set="primaryPackaging"/>
+          <field id="gs1:stackingMaxWeight" mandatory="false" read-only="false" set="primaryPackaging">
+            <control template="/org/alfresco/components/form/controls/number-unit.ftl">
+              <control-param name="unit">kg</control-param>
+            </control>
+          </field>
           <field id="pack:tare" mandatory="false" read-only="true" set="primaryPackaging"/>
           <field id="pack:tareUnit" mandatory="false" read-only="true" set="primaryPackaging"/>
           <field help-id="becpg.forms.help.gs1.weight" id="gs1:weight" mandatory="false" read-only="true" set="primaryPackaging">
@@ -837,6 +833,13 @@
            <field id="gs1:secondaryDiameter" mandatory="false" read-only="false" set="secondaryPackaging">
             <control template="/org/alfresco/components/form/controls/number-unit.ftl">
               <control-param name="unit">mm</control-param>
+            </control>
+          </field>
+          
+          <field id="gs1:secondaryStackingFactor" mandatory="false" read-only="false" set="secondaryPackaging"/>
+          <field id="gs1:secondaryStackingMaxWeight" mandatory="false" read-only="false" set="secondaryPackaging">
+            <control template="/org/alfresco/components/form/controls/number-unit.ftl">
+              <control-param name="unit">kg</control-param>
             </control>
           </field>
           
@@ -1394,6 +1397,7 @@
           <show force="true" id="bcpg:eanCodeLevel2"/>
           <show force="true" id="bcpg:eanCodeLevel3"/>
           <show force="false" id="gs1:referencedTradeItemEanCode"/>
+          <show force="false" id="gs1:referencedTradeItemTypeCode"/>
           <show force="true" id="bcpg:subsidiaryRef"/>
           <show force="true" id="bcpg:trademarkRef"/>
           <show force="true" id="bcpg:plants"/>
@@ -1533,6 +1537,7 @@
                 <control-param name="forceEditable">true</control-param>
             </control>
           </field>
+          <field id="gs1:referencedTradeItemTypeCode" mandatory="false" read-only="false" set="mainInfo"/>
           <field id="bcpg:customsCodeRef" mandatory="false" read-only="false" set="2-col-product-criteria">
 	          <control>
 	          	<control-param name="forceEditable">true</control-param>
@@ -2134,8 +2139,6 @@
           <show force="true" id="gs1:preparationType"/>
           <show force="true" id="bcpg:productMicrobioCriteriaRef"/>
           <show force="true" id="bcpg:meatType"/>
-          <show force="true" id="gs1:referencedTradeItemEanCode"/>
-          <show force="true" id="gs1:referencedTradeItemTypeCode"/>
           <show force="true" id="bcpg:unitPrice"/>
           <show force="true" id="bcpg:unitTotalCost"/>
           <show force="true" id="bcpg:priceCurrency"/>
@@ -2171,6 +2174,8 @@
           <show force="true" id="gs1:width"/>
           <show force="true" id="gs1:depth"/>
           <show force="true" id="gs1:diameter"/>
+          <show force="true" id="gs1:stackingFactor"/>
+          <show force="true" id="gs1:stackingMaxWeight"/>
           <show force="true" id="pack:tare"/>
           <show force="true" id="pack:tareUnit"/>
           <show force="true" id="gs1:weight"/>
@@ -2192,6 +2197,8 @@
           <show force="true" id="gs1:secondaryWidth"/>
           <show force="true" id="gs1:secondaryDepth"/>
           <show force="true" id="gs1:secondaryDiameter"/>
+          <show force="true" id="gs1:secondaryStackingFactor"/>
+          <show force="true" id="gs1:secondaryStackingMaxWeight"/>
           <show force="true" id="gs1:secondaryNetWeight"/>
           <show force="true" id="gs1:secondaryWeight"/>
           <show force="true" id="gs1:secondaryDataCarrierTypeCode"/>
@@ -2629,6 +2636,12 @@
               <control-param name="unit">mm</control-param>
             </control>
           </field>
+          <field id="gs1:stackingFactor" mandatory="false" read-only="false" set="primaryPackaging"/>
+          <field id="gs1:stackingMaxWeight" mandatory="false" read-only="false" set="primaryPackaging">
+            <control template="/org/alfresco/components/form/controls/number-unit.ftl">
+              <control-param name="unit">kg</control-param>
+            </control>
+          </field>
           <field id="pack:tare" mandatory="false" read-only="true" set="primaryPackaging"/>
           <field id="pack:tareUnit" mandatory="false" read-only="true" set="primaryPackaging"/>
           <field help-id="becpg.forms.help.gs1.weight" id="gs1:weight" mandatory="false" read-only="true" set="primaryPackaging">
@@ -2692,6 +2705,12 @@
           <field id="gs1:secondaryDiameter" mandatory="false" read-only="false" set="secondaryPackaging">
             <control template="/org/alfresco/components/form/controls/number-unit.ftl">
               <control-param name="unit">mm</control-param>
+            </control>
+          </field>
+          <field id="gs1:secondaryStackingFactor" mandatory="false" read-only="false" set="secondaryPackaging"/>
+          <field id="gs1:secondaryStackingMaxWeight" mandatory="false" read-only="false" set="secondaryPackaging">
+            <control template="/org/alfresco/components/form/controls/number-unit.ftl">
+              <control-param name="unit">kg</control-param>
             </control>
           </field>
           <field id="gs1:secondaryNetWeight" mandatory="false" read-only="true" set="secondaryPackaging">
