--- a/becpg-share/src/main/assembly/web/components/watson/watson.css
+++ b/becpg-share/src/main/assembly/web/components/watson/watson.css
@@ -8,6 +8,15 @@
 	z-index: 1100
 }
 
+.mdc-layout-grid {
+    overflow-y: scroll;
+    height: 88%;
+}
+
+.watson {
+    overflow: hidden;
+}
+
 #watson-chatbot-chat-fab-close {
 	background-color: #fff;
 	border-radius: 50%;
