--- a/becpg-plm/becpg-plm-share/src/main/resources/alfresco/forms/becpg-plm-rm-form-config.xml
+++ b/becpg-plm/becpg-plm-share/src/main/resources/alfresco/forms/becpg-plm-rm-form-config.xml
@@ -38,8 +38,8 @@
           <show force="false" id="bcpg:reconstitutionPriority"/>
           <show force="false" id="bcpg:diluentRef"/>
           <show force="false" id="bcpg:targetReconstitutionRef"/>
+          <show force="false" id="bcpg:evaporatedRate"/>
           <show force="false" id="bcpg:meatType"/>
-          
           <show force="false" id="gs1:cheeseMaturationPeriodDescription"/>
 		  <show force="false" id="gs1:cheeseMaturationProcessContainerTypeCode"/>
 		  <show force="false" id="gs1:fatPercentageInDryMatter"/>
@@ -255,6 +255,8 @@
               <control-param name="showLink">false</control-param>
             </control>
           </field>
+          <field id="bcpg:evaporatedRate" mandatory="false" read-only="false" set="consumer"/>
+          
           <field id="bcpg:meatType" mandatory="false" read-only="false" set="consumer"/>
           
           <set appearance="bordered-panel" id="cheese" label-id="becpg.forms.set.cheese.label" template="/org/alfresco/components/form/2-column-set.ftl"/>
@@ -724,6 +726,8 @@
           <show force="false" id="bcpg:reconstitutionPriority"/>
           <show force="false" id="bcpg:diluentRef"/>
           <show force="false" id="bcpg:targetReconstitutionRef"/>
+          <show force="false" id="bcpg:evaporatedRate"/>
+          
           <show force="true" id="bcpg:ingTypeV2"/>
           <show force="true" id="bcpg:ingCEECode"/>
           <show force="true" id="bcpg:useByDate"/>
@@ -829,6 +833,8 @@
               <control-param name="showLink">false</control-param>
             </control>
           </field>
+           <field id="bcpg:evaporatedRate" mandatory="false" read-only="false" set="consumer"/>
+          
           <field id="bcpg:ingTypeV2" mandatory="false" read-only="false" set="consumer">
             <control template="/org/alfresco/components/form/controls/autocomplete.ftl">
               <control-param name="ds">becpg/autocomplete/targetassoc/associations/bcpg:ingTypeItem
@@ -1282,6 +1288,7 @@
           <show force="true" id="bcpg:reconstitutionPriority"/>
           <show force="true" id="bcpg:diluentRef"/>
           <show force="true" id="bcpg:targetReconstitutionRef"/>
+          <show force="true" id="bcpg:evaporatedRate"/>
           <show force="true" id="bcpg:meatType"/>
           <show force="true" id="bcpg:ingTypeV2"/>
           <show force="true" id="bcpg:ingCEECode"/>
@@ -1425,6 +1432,8 @@
               <control-param name="showLink">false</control-param>
             </control>
           </field>
+          <field id="bcpg:evaporatedRate" mandatory="false" read-only="false" set="consumer"/>
+          
           <field id="bcpg:meatType" mandatory="false" read-only="false" set="consumer"/>
           <field id="bcpg:ingTypeV2" mandatory="false" read-only="false" set="consumer">
             <control template="/org/alfresco/components/form/controls/autocomplete.ftl">
